--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {    compile 'de.hdodenhof:circleimageview:1.3.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile ('com.weiwangcn.betterspinner:library-material:1.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.rengwuxian.materialedittext', module: 'library'
+    }
 }
 repositories {
     mavenCentral()
