Mostrar fragment de materias
se muestra la lista de materias en el segundo tab. al dar click en una materia
se abre un nuevo activity con las preguntas de las materias.

se aumentaron mas items al array de materias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name=".AnswerActivity"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:theme="@style/ActionBarStyle"
+            android:name=".materias.MateriaFilterActivity" />
     </application>
 
 </manifest>
