--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="espol.ihm.preguntaespol">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,6 +26,16 @@
         <activity
             android:theme="@style/ActionBarStyle"
             android:name=".materias.MateriaFilterActivity" />
+        <activity
+            android:name="com.criptext.monkeykitui.photoview.PhotoViewActivity"/>
+        <!-- Crop Image -->
+        <activity
+            android:name="com.soundcloud.android.crop.CropImageActivity"/>
+
+        <!-- Edit Photo -->
+        <activity
+            android:theme="@style/ActionBarStyle"
+            android:name="com.criptext.monkeykitui.input.photoEditor.PhotoEditorActivity" />`
     </application>
 
 </manifest>
