Visualizar mis preguntas respuestas y mis preguntas, se pueden eliminar pero no editar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
         <activity
             android:name=".AnswerActivity"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".MisAnunciosActivity"/>
+        <activity
+            android:name=".MisPreguntasActivity"/>
+        <activity
+            android:name=".MisRespuestasActivity"/>
+        <activity
+            android:name=".MisRecompensasActivity"/>
     </application>
 
 </manifest>
